Implement dependency-based (partial) ordering for parallel initialization tasks (#123)